public/lite/api/en/r1.6/_sources/generate/file_include_lite_include_registry_node_parser.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_lite_include_registry_node_parser.h:

File node_parser.h
==================

|exhale_lsh| :ref:`Parent directory <dir_include_lite_include_registry>` (``include/lite/include/registry``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/lite/include/registry/node_parser.h``)
------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_lite_include_registry_node_parser.h.rst





Includes
--------


- ``include/registry/converter_context.h`` (:ref:`file_include_lite_include_registry_converter_context.h`)

- ``map`` (:ref:`file_include_core_utils_hash_map.h`)

- ``memory``

- ``string``

- ``vector``



Included By
-----------


- :ref:`file_include_lite_include_registry_node_parser_registry.h`




Namespaces
----------


- :ref:`namespace_caffe`

- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__converter`

- :ref:`namespace_mindspore__ops`

- :ref:`namespace_onnx`

- :ref:`namespace_tensorflow`

- :ref:`namespace_tflite`


Classes
-------


- :ref:`exhale_class_classmindspore_converter_NodeParser`


Typedefs
--------


- :ref:`exhale_typedef_mindspore_converter_NodeParserPtr-1`

